fixed typo in lecture 14

--- a/lectures/14-declass.tex
+++ b/lectures/14-declass.tex
@@ -318,7 +318,7 @@ We could also consider generalizing even further, supporting a $\keywordfont{dec
 \cinferenceRule[declassl|DeclassL]{Declassify Expression}
 {\linferenceRule[sequent]
   {}
-  {\lsequent{\Gamma}{\keywordfont{declassify}_\ell(\astrm) : \bot}}
+  {\lsequent{\Gamma}{\keywordfont{declassify}_\ell(\astrm) : \ell}}
 }{}%
 \]
 To keep things simple, we'll stick with the former expression \keywordfont{declassify} for the rest of the lecture.
