--- a/2020/lectures/02-prop.tex
+++ b/2020/lectures/02-prop.tex
@@ -6,7 +6,7 @@
 \newcommand{\leccourse}{Software Foundations of Security and Privacy}
 \newcommand{\lecdate}{} %e.g. {October 21, 2013}
 \newcommand{\lecnum}{2}
-\newcommand{\lectitle}{Propositional Logic and Proofs\footnote{Based heavily on lecture notes contributed by Andr\'e Plazter}}
+\newcommand{\lectitle}{Propositional Logic and Proofs\footnote{Based on lecture notes written by Andr\'e Plazter}}
 \newcommand{\lecturer}{Matt Fredrikson}
 \newcommand{\lecurl}{https://15316-cmu.github.io/index}
 
