fixed typo in lecture 2

--- a/2020/lectures/02-prop.tex
+++ b/2020/lectures/02-prop.tex
@@ -171,7 +171,7 @@ With this definition, it is easy to establish that formula \rref{eq:ex1} is true
 \[
 \imodels{\I}{(p \limply q) \lbisubjunct (\lnot p \lor q)}
 \]
-For example, the evaluation of the right-hand side formula after the implication $\limply$ proceeds as follows:
+For example, the evaluation of the right-hand side formula before the implication $\limply$ proceeds as follows:
 \[
 \imodels{\I}{p \limply q}
 ~\text{because}~ \inonmodels{\I}{p}
